// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Container should render Default 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-15jveuj"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-hip9hq-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-hyum1k-MuiToolbar-root"
      >
        <div
          class="MuiTypography-root MuiTypography-h6 css-x941oh-MuiTypography-root"
        >
          Newsroom
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Navbar Container should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname MuiBox-root css-15jveuj"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-hip9hq-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-hyum1k-MuiToolbar-root"
      >
        <div
          class="MuiTypography-root MuiTypography-h6 css-x941oh-MuiTypography-root"
        >
          Newsroom
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Navbar Container should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-15jveuj"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-hip9hq-MuiPaper-root-MuiAppBar-root"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-hyum1k-MuiToolbar-root"
      >
        <div
          class="MuiTypography-root MuiTypography-h6 css-x941oh-MuiTypography-root"
        >
          Newsroom
        </div>
      </div>
    </header>
  </div>
</DocumentFragment>
`;
